<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back_details"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/icn_back_btn"
                app:tint="@color/black"
                tools:ignore="ContentDescription" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_checkout_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="2"
            android:padding="4dp"
            android:text="@string/tv_checkout_details"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_home_icn_details"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/icn_home"
                app:tint="@color/dark_orange"
                tools:ignore="ContentDescription" />
        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@color/very_light_gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/llBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTop"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_delivery_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:text="@string/tv_delivery_address"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/cv_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_hans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_hans"
                    android:textAppearance="@style/Widget.MaterialComponents.TextView"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_pobox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_pobox"
                    android:textAppearance="@style/Widget.MaterialComponents.TextView"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nunnk"
                    android:textAppearance="@style/Widget.MaterialComponents.TextView"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_green_land"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_green_land"
                    android:textAppearance="@style/Widget.MaterialComponents.TextView"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btnUpdateAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/bg_offers_rounded"
                    android:paddingStart="16dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/btnUpdateAddress"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_order_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_order_summary"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="12dp"
            tools:listitem="@layout/layout_order_item" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_info_details"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:src="@drawable/icn_info"
                tools:ignore="ContentDescription" />

        </LinearLayout>



        <TextView
            android:id="@+id/tv_total_details"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tzv_total_details"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_price_details"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_price_details"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="2"
            android:background="@drawable/add_btn"
            android:text="@string/btnCheckout"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>