<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment">


    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back_payment"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/icn_back_btn"
                app:tint="@color/black"
                tools:ignore="ContentDescription" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvToolbar_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="2"
            android:padding="4dp"
            android:text="@string/tvToolbar_checkout"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_home_payment"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/icn_home"
                app:tint="@color/dark_orange"
                tools:ignore="ContentDescription" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@color/very_light_gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/llBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTop"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:background="@null"
                android:text="@string/tv_delivery"
                android:textAppearance="@style/Widget.MaterialComponents.TextView"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:background="@null"
                android:text="@string/tv_payment"
                android:textAppearance="@style/Widget.MaterialComponents.TextView"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/cv_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_discount"
                    android:textAppearance="@style/Widget.MaterialComponents.TextView"
                    android:textSize="18sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_payment_method"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true">



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_payment"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/r_btn_wallet_upi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical|right"
                android:layoutDirection="rtl"
                android:padding="16dp"
                android:text="@string/r_btn_wallet_upi"
                android:textAlignment="textStart"
                android:textSize="16sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

            <RadioButton
                android:id="@+id/r_btn_net_banking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical|right"
                android:layoutDirection="rtl"
                android:padding="16dp"
                android:text="@string/r_btn_net_banking"
                android:textAlignment="textStart"
                android:textSize="16sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

            <RadioButton
                android:id="@+id/r_btn_credit_debit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center_vertical|right"
                android:layoutDirection="rtl"
                android:padding="16dp"
                android:text="@string/r_btn_credit_debit"
                android:textAlignment="textStart"
                android:textSize="16sp"
                tools:ignore="RtlCompat,RtlHardcoded" />

            <RadioButton
                android:id="@+id/r_btn_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center_vertical|right"
                android:layoutDirection="rtl"
                android:padding="16dp"
                android:text="@string/r_btn_cash"
                android:textAlignment="textStart"
                android:textSize="16sp"
                tools:ignore="RtlCompat,RtlHardcoded" />


        </RadioGroup>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_info_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icn_info"
                tools:ignore="ContentDescription" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_total_payment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_total_payment"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_price_payment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_price_payment"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="2"
            android:background="@drawable/add_btn"
            android:text="@string/btnProceed"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>